--- a/index.html
+++ b/index.html
@@ -14,10 +14,36 @@
     <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon"> 
     <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
     <style>
-        /* GLOBAL FONT DECLARATIONS */
+        /**
+         * Place your css font include declarations here. Placing them in the
+         * head instead of in a fonts/stylesheet.css type file will make
+         * them load without an extra http request and will prevent FOUT.
+         */
     </style>
+    
+    <style>
+        /* 
+            Include critical css file
+            <? require(app/views/criticalcss.php); ?> 
+        */
+    </style>
+
+    <script>
+    /**
+     * Grunticon code required to show icons for all browsers,
+     * even legacy ones. (Renders pngs for legacy browsers)
+     */
+    !function(){function e(e,n,t){"use strict";var o=window.document.createElement("link"),r=n||window.document.getElementsByTagName("script")[0],i=window.document.styleSheets;return o.rel="stylesheet",o.href=e,o.media="only x",r.parentNode.insertBefore(o,r),o.onloadcssdefined=function(e){for(var n,t=0;t<i.length;t++)i[t].href&&i[t].href===o.href&&(n=!0);n?e():setTimeout(function(){o.onloadcssdefined(e)})},o.onloadcssdefined(function(){o.media=t||"all"}),o}function n(e,n){e.onload=function(){e.onload=null,n&&n.call(e)},"isApplicationInstalled"in navigator&&"onloadcssdefined"in e&&e.onloadcssdefined(n)}!function(t){var o=function(r,i){"use strict";if(r&&3===r.length){var a=t.navigator,c=t.document,s=t.Image,d=!(!c.createElementNS||!c.createElementNS("http://www.w3.org/2000/svg","svg").createSVGRect||!c.implementation.hasFeature("http://www.w3.org/TR/SVG11/feature#Image","1.1")||t.opera&&-1===a.userAgent.indexOf("Chrome")||-1!==a.userAgent.indexOf("Series40")),u=new s;u.onerror=function(){o.method="png",o.href=r[2],e(r[2])},u.onload=function(){var t=1===u.width&&1===u.height,a=r[t&&d?0:t?1:2];t&&d?o.method="svg":t?o.method="datapng":o.method="png",o.href=a,n(e(a),i)},u.src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==",c.documentElement.className+=" grunticon"}};o.loadCSS=e,o.onloadCSS=n,t.grunticon=o}(this),function(e,n){"use strict";var t=n.document,o="grunticon:",r=function(e){if(t.attachEvent?"complete"===t.readyState:"loading"!==t.readyState)e();else{var n=!1;t.addEventListener("readystatechange",function(){n||(n=!0,e())},!1)}},i=function(e){return n.document.querySelector('link[href$="'+e+'"]')},a=function(e){var n,t,r,i,a,c,s={};if(n=e.sheet,!n)return s;t=n.cssRules?n.cssRules:n.rules;for(var d=0;d<t.length;d++)r=t[d].cssText,i=o+t[d].selectorText,a=r.split(");")[0].match(/US\-ASCII\,([^"']+)/),a&&a[1]&&(c=decodeURIComponent(a[1]),s[i]=c);return s},c=function(e){var n,r,i,a;i="data-grunticon-embed";for(var c in e){a=c.slice(o.length);try{n=t.querySelectorAll(a)}catch(s){continue}r=[];for(var d=0;d<n.length;d++)null!==n[d].getAttribute(i)&&r.push(n[d]);if(r.length)for(d=0;d<r.length;d++)r[d].innerHTML=e[c],r[d].style.backgroundImage="none",r[d].removeAttribute(i)}return r},s=function(n){"svg"===e.method&&r(function(){c(a(i(e.href))),"function"==typeof n&&n()})};e.embedIcons=c,e.getCSS=i,e.getIcons=a,e.ready=r,e.svgLoadedCallback=s,e.embedSVG=s}(grunticon,this),function(e,n){"use strict";var t=n.document,o=function(e,t){var o=new n.XMLHttpRequest;return"withCredentials"in o?o.open("GET",e,!0):"undefined"!=typeof n.XDomainRequest&&(o=new n.XDomainRequest,o.open("GET",e)),t&&(o.onload=t),o.send(),o},r=function(n){"svg"===e.method&&e.ready(function(){o(e.href,function(){var o=t.createElement("style");o.innerHTML=this.responseText;var r=e.getCSS(e.href);r&&(r.parentNode.insertBefore(o,r),r.parentNode.removeChild(r),e.embedIcons(e.getIcons(o)),"function"==typeof n&&n())})})};e.ajaxGet=o,e.svgLoadedCORSCallback=r,e.embedSVGCors=r}(grunticon,this)}();
+        /**
+         * Change below path to match where your generated files were placed
+         */
+        grunticon(["public/img/icons/icons.data.svg.css", "public/img/icons/icons.data.png.css", "public/img/icons/icons.fallback.css"], grunticon.svgLoadedCallback);
+    </script>
+    <noscript><link href="public/img/icons/icons.fallback.css" rel="stylesheet"></noscript>
+
     <!--[if lt IE 9]>
         <script src="public/js/vendor/html5shiv.min.js"></script>
+        <script src="public/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
 
@@ -62,22 +88,30 @@
     <div class="lightbox">
         <div class="wrapper">
             <div class="lightbox-wrapper" id="lightbox1">
+                <div class="close">
+                    <span class="icon-close"></span>
+                </div>
                 <h1>Here is the first lightbox</h1>
                 <br><br>
             </div>
             <div class="lightbox-wrapper" id="lightbox2">
+                <div class="close">
+                    <span class="icon-close"></span>
+                </div>
                 <h1>Here is the second lightbox</h1>
                 <br><br>
             </div>
-            <span id="close">CLOSE</span>
         </div>
     </div>
 </body>
 
-<!--[if lte IE 9]>
-    <script src="/public/js/vendor/html5-3.6-respond-1.1.0.min.js"></script> 
-<![endif]-->
-<link rel="stylesheet" href="public/css/layout.css">
+<script>
+    /** LOAD CSS  **/
+    !function(e){"use strict";var n=function(n,t,o){var l,r=e.document,i=r.createElement("link");if(t)l=t;else{var a=(r.body||r.getElementsByTagName("head")[0]).childNodes;l=a[a.length-1]}var d=r.styleSheets;i.rel="stylesheet",i.href=n,i.media="only x",l.parentNode.insertBefore(i,t?l:l.nextSibling);var f=function(e){for(var n=i.href,t=d.length;t--;)if(d[t].href===n)return e();setTimeout(function(){f(e)})};return i.onloadcssdefined=f,f(function(){i.media=o||"all"}),i};"undefined"!=typeof module?module.exports=n:e.loadCSS=n}("undefined"!=typeof global?global:this);
+    loadCSS('public/css/layout.css');
+</script>
+<noscript><link rel="stylesheet" href="public/css/layout.css"></noscript>
+
 <script src="public/js/vendor/modernizr.min.js"></script>
 <script src="public/js/vendor/jquery-1.11.0.min.js"></script>
 <script src="public/js/vendor/picturefill.min.js"></script>
